@@ -10,7 +10,7 @@ class CPlayListWPL :
 public:
   CPlayListWPL(void);
   virtual ~CPlayListWPL(void);
-  virtual bool Load(const CStdString& strFileName);
+  virtual bool Load(const CStdString& strFileName, bool bDeep);
   virtual void Save(const CStdString& strFileName) const;
 };
 };
